syntax = "proto3";
package interop;

message MovingObstacle {
    float latitude = 1;
    float longitude = 2;
    float altitude_msl = 3;
    float sphere_radius = 4;
}

message StationaryObstacle {
    float latitude = 1;
    float longitude = 2;
    float cylinder_height = 3;
    float cylinder_radius = 4;
}

message Obstacles {
    repeated MovingObstacle moving_obstacles = 1;
    repeated StationaryObstacle stationary_obstacles = 2;
}