syntax = "proto3";
package interop;

import "interop/mission_report.proto";


message Telemetry {
    float latitude = 1;
    float longitude = 2;
    float altitude_msl = 3;
    float uas_heading = 4;
}

message GCSMessage {
    oneof gcs_message {
     Telemetry telem = 1;
     MissionReportStatus mission_report = 2;
  }
}